--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>Reset Command</h2>
     <h2>Reset Command 1</h2>
     <h2>Reset Command 3</h2>
+    <h2>Deepak Vishwakarma</h2>
   </body>
 </html>
