--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Reset Command 1</h2>
     <h2>Reset Command 3</h2>
     <h2>Deepak Vishwakarma</h2>
+    <h1>The Coder</h1>
   </body>
 </html>
